buildpacks/nodejs-pnpm-install/src/snapshots/errors___pnpm_install_create_symlink_error.snap
---
source: buildpacks/nodejs-pnpm-install/src/errors.rs
---
- Debug Info:
  - Target directory does not exist

! Failed to create symlink
!
! An unexpected I/O error occurred while create a symlink from `/app/node_modules/.pnpm` to `/layers/pnpm_install/dir`.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
