buildpacks/nodejs-pnpm-install/src/snapshots/errors___pnpm_install_set_store_dir_error.snap
---
source: buildpacks/nodejs-pnpm-install/src/errors.rs
---
- Debug Info:
  - Command failed `pnpm config set store-dir /some/dir --global`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to configure pnpm store dir
!
! An unexpected error occurred while configuring the store directory for pnpm. This is the location on disk where pnpm saves all packages.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
